@@ -106,6 +106,7 @@ Clang::CastXML                                 = 0.02
 Class::Inspector                               = 1.36
 Const::Introspect::C                           = 0.01
 Devel::ebug                                    = 0.63
+Devel::ebug::HTTP                              = 0.33
 Dist::Zilla::App::Command::aliendeps           = 0.03
 Dist::Zilla::Plugin::AlienBuild                = 0.32
 Dist::Zilla::Plugin::Alt                       = 0.08
@@ -126,7 +127,7 @@ FFI::C                                         = 0.10
 FFI::C::Stat                                   = 0.02
 FFI::CheckLib                                  = 0.28
 FFI::ExtractSymbols                            = 0.05
-FFI::Platypus                                  = 1.46
+FFI::Platypus                                  = 1.50
 FFI::Platypus::Declare                         = 1.34
 FFI::Platypus::Lang::CPP                       = 0.05
 FFI::Platypus::Lang::CPP::Demangle::XS         = 0.03
