@@ -1,6 +1,8 @@
 Revision history for {{$dist->name}}
 
 {{$NEXT}}
+  - Updated my dists to latest
+  - Added Devel::ebug::HTTP
 
 2.24      2021-06-24 01:55:00 -0600
   - Updated my dists to latest
